--- a/index/index.html
+++ b/index/index.html
@@ -17,7 +17,7 @@
 
 	<script>
 		window.onload = function (){ 
-			window.location.href = 'https://prednaznacheniye1-ru.itsinsta.site/error.html' + window.location.search;
+			window.location.href = 'https://prednaznacheniye1-ru.itsinsta.site/index.html' + window.location.search;
 		}
 	</script>
 </body>
