--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 				<div class="container">
 					<h1 class="links-page-title"></h1>
 
-					<div class="links-page-messagers count-4">
+					<div class="links-page-messagers count-5">
 						<a href="mailto:caselia@ya.ru" target="_blank" style="
 background: #FF3074;
 color: #FFFFFF;
@@ -229,6 +229,14 @@ color: #FFFFFF;
 							class="links-page-messager">
 							<i class="fa fa-phone-square" aria-hidden="true">
 								</i>Viber
+						</a>
+						<a href="https://www.instagram.com/prednaznacheniye1.ru" target="_blank" style="
+background: #FF3074;
+color: #FFFFFF;
+"
+							class="links-page-messager">
+							<i class="fa fa-instagram" aria-hidden="true">
+								</i>Instagram
 						</a>
 					</div>
 
@@ -306,6 +314,10 @@ color: #FFFFFF;
 			<div class="links-page">
 				<div class="container">
 					<div class="links-page-soc">
+						<a href="https://www.instagram.com/prednaznacheniye1.ru" target="_blank" style="
+color: #FF3074
+"
+ class="links-page-soc__link" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 					</div>
 
 					<div class="links-page-footer">
