--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ color: #FFFFFF;
 							<i class="fa fa-whatsapp" aria-hidden="true">
 								</i>WhatsApp
 						</a>
-						<a href="tg://resolve?domain=Olga Gorgulu " target="_blank" style="
+						<a href="tg://resolve?domain=@olga_orgulu " target="_blank" style="
 background: #FF3074;
 color: #FFFFFF;
 "
